--- a/css/estilos.css
+++ b/css/estilos.css
@@ -95,7 +95,7 @@ header nav div a {
   /*HACE QUE LOS ELEMENTOS MIDAN LO QUE TIENEN QUE MEDIR*/ }
 
 .fotosgrid {
-  height: 100vh;
+  height: 100vh-nav;
   background-color: black;
   background-size: cover;
   display: flex;
@@ -127,6 +127,7 @@ header nav div a {
         color: white;
         text-align: left;
         font-size: 30px;
+        background-color: rgba(0, 0, 0, 0.5);
         transition: 1s;
         /* Transición suave */
         padding-left: 10px; }
@@ -135,7 +136,7 @@ header nav div a {
           /* Fondo semitransparente */
           opacity: 2;
           /* Mostrar al pasar el mouse */
-          font-size: 80px; }
+          font-size: 50px; }
       .fotosgrid .galeriagrid a.img-a {
         grid-column: 1 / 3; }
       .fotosgrid .galeriagrid a.img-b {
@@ -156,11 +157,17 @@ header nav div a {
 
 .image-gallery-section {
   background-color: black; }
+  .image-gallery-section h2 {
+    height: 50px;
+    font-size: 20px;
+    color: white;
+    align-content: center;
+    text-align: center; }
 
 .image-gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  max-width: 50rem;
+  max-width: 900px;
   margin-inline: auto; }
 
 .image-gallery > img {
@@ -173,3 +180,38 @@ header nav div a {
 .image-gallery:hover img:not(:hover) {
   transform: scale(0.9);
   opacity: 0.5; }
+
+@media screen and (max-width: 790px) {
+  main .fotosgrid .galeriagrid {
+    background-color: rgba(0, 0, 0, 0.5); }
+    main .fotosgrid .galeriagrid p {
+      font-size: 16px; }
+      main .fotosgrid .galeriagrid p:hover {
+        background-color: rgba(0, 0, 0, 0.5);
+        /* Fondo semitransparente */
+        opacity: 2;
+        /* Mostrar al pasar el mouse */
+        font-size: 16px; }
+    main .fotosgrid .galeriagrid .img-a {
+      grid-column: 1 / 3; }
+    main .fotosgrid .galeriagrid .img-b {
+      grid-column: 3 / 5;
+      grid-row: 1 / 3; }
+    main .fotosgrid .galeriagrid .img-d {
+      grid-column: 2 / 3;
+      grid-row: 2 / 5; }
+    main .fotosgrid .galeriagrid .img-d {
+      grid-column: 2 / 3;
+      grid-row: 2 / 3; }
+    main .fotosgrid .galeriagrid .img-e {
+      grid-row: 3 / 5; }
+    main .fotosgrid .galeriagrid .img-f {
+      grid-column: 2 / 4;
+      grid-row: 3 / 5; }
+    main .fotosgrid .galeriagrid .img-g {
+      grid-row: 3 / 5; }
+  /* -----------------------------------------------------------------------FOOTER*/
+  .container .row .col-md-3 {
+    width: 50%;
+    justify-content: center;
+    padding: 0; } }
