--- a/css/style.css
+++ b/css/style.css
@@ -257,206 +257,312 @@ header nav div a {
 
 /*----------------------------------------------------------FORM LOGIN*/
 
-.modal {
-    /* visibility: hidden; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.contenedor-login {
+    display: block;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.form-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #121313cd;
-    width: 450px;
-    height: 550px;
+    z-index: 1000;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 50px 40px 0 40px;
+    width: 90%;
+    max-width: 450px;
+    min-height: 600px;
     border-radius: 25px;
-    box-shadow: 10px 10px 10px black;
-    margin: 50px;
+    background-color: rgba(0, 0, 0, 0.5);
+    box-shadow: 0 50px 70px -20px rgba(0, 0, 0, 0.85);
+    animation: aparecerModal 0.5s ease-out;
 }
 
-#validationForm {
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    height: 100%;
-    width: 100%;
+@keyframes aparecerModal {
+    from {
+        opacity: 0;
+        transform: translate(-50%, -60%);
+    }
+    to {
+        opacity: 1;
+        transform: translate(-50%, -50%);
+    }
 }
 
-.form-group {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+.contenedor-login:after {
+    content: '';
+    display: inline-block;
+    position: absolute;
+    z-index: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: radial-gradient(ellipse at left bottom, rgb(0, 0, 0) 0%, rgba(39, 43, 40, 0.919) 59%, rgba(54, 53, 53, 0.856) 100%);
+    box-shadow: 0 -20px 150px -20px rgba(0, 0, 0, 0.5);
+    border-radius: 25px;
 }
 
-.input {
-    width: 80%;
-    height: 55px;
-    border: none;
-    outline: none;
-    border-radius: 15px;
-    padding: 16px;
-    background-color: #ccc;
-    box-shadow: inset 2px 5px 10px rgba(0,0,0,0.3);
-    transition: 1s ease-in-out;
+.formulario-login {
+    position: relative;
+    z-index: 1;
+    padding-bottom: 45px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.736);
 }
 
-.input:focus {
-    background-color: white;
-    transform: scale(1.05);
-    box-shadow: 13px 13px 100px #969696,
+.navegacion-login {
+    position: relative;
+    padding: 0;
+    margin: 0 0 60px 10px;
 }
 
-label {
-    font-size: 24px;
-    font-family: truculenta;
-    color: white;
-    font-weight: 400;
-    text-shadow: 1px 1px 1px black;
+.navegacion-login__item {
+    list-style: none;
+    display: inline-block;
+}
+
+.navegacion-login__item + .navegacion-login__item {
+    margin-left: 22px;
+}
+
+.navegacion-login__item a {
+    position: relative;
+    color: rgba(255, 255, 255, 0.5);
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-size: 20px;
+    padding-bottom: 5px;
+    transition: .20s all ease;
+}
+
+.navegacion-login__item.activo a,
+.navegacion-login__item a:hover {
+    color: #ffffff;
+    transition: .15s all ease;
+}
+
+.navegacion-login__item a:after {
+    content: '';
+    display: inline-block;
+    height: 10px;
+    background-color: rgb(255, 255, 255);
+    position: absolute;
+    right: 100%;
+    bottom: -1px;
+    left: 0;
+    border-radius: 50%;
+    transition: .15s all ease;
+}
+
+.navegacion-login__item a:hover:after,
+.navegacion-login__item.activo a:after {
+    background-color: rgb(0, 121, 6);
+    height: 2px;
+    right: 0;
+    bottom: 2px;
+    border-radius: 0;
+    transition: .20s all ease;
+}
+
+.etiqueta-login {
+    display: block;
+    padding-left: 10px;
+}
+
+.etiqueta-login,
+.etiqueta-login--checkbox {
+    color: rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+    font-size: 12px;
     margin-bottom: 10px;
 }
 
-#fdn {
-    text-align: center;
+.etiqueta-login--checkbox {
+    display: inline-block;
+    position: relative;
+    padding-left: 15px;
+    margin-top: 20px;
+    margin-left: 10px;
+    color: #ffffff;
+    font-size: 12px;
+    text-transform: inherit;
 }
 
-.botones {
-    width: 90%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 30px;
-}
-
-#btn,
-#btnDelete {
-    width: 40%;
-    height: 40px;
-    font-size: 16px;
-    text-align: center;
-    letter-spacing: 2.5px;
-    font-weight: 500;
-    color: #000;
-    background-color:#ccc;;
-    border: none;
-    border-radius: 45px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
+.entrada-login {
+    color: white;
+    font-size: 18px;
+    width: 100%;
+    padding: 5px 10px;
+    border: 2px solid transparent;
     outline: none;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.25);
+    letter-spacing: 1px;
 }
 
-#btn:hover {
-    background-color: #036017;
-    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
-    color: #fff;
-    transform: translateY(-7px);
+.entrada-login:hover,
+.entrada-login:focus {
+    color: white;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    background-color: transparent;
 }
 
-#btn:active {
-    transform: translateY(-1px);
+.entrada-login + .etiqueta-login {
+    margin-top: 15px;
 }
 
-#btnDelete:hover {
-    background-color: #5f0202;
-    box-shadow: 0px 15px 20px #5f020275;
-    color: #fff;
-    transform: translateY(-7px);
+.entrada-login--checkbox {
+    position: absolute;
+    top: 1px;
+    left: 0;
+    margin: 0;
 }
 
-#btnDelete:active {
-    transform: translateY(-1px);
+.boton-login {
+    color: #ffffff;
+    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 10px;
+    padding: 7px 0;
+    border-radius: 20px;
+    display: block;
+    width: 100%;
+    background-color: rgba(1, 88, 14, 0.75);
+    border: none;
+    cursor: pointer;
+    transition: 1s;
+    margin-top: 50px;
+}
+
+.boton-login:hover {
+    box-shadow: 5px 5px  black;
+}
+
+.olvido-login {
+    display: block;
+    margin-top: 50px;
+    text-align: center;
+    color: rgba(255, 255, 255, 0.75);
+    font-size: 12px;
+    text-decoration: none;
+    position: relative;
+    z-index: 1;
+}
+
+.olvido-login:hover {
+    color: rgb(17, 97, 237);
+}
+
+/* Estilos para el modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-contenido {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 500px;
+    text-align: center;
+}
+
+.modal-cerrar {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.modal-cerrar:hover,
+.modal-cerrar:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 
 /*-----------------------------------------------------------------------mensajes de error o ingreso*/
 
-.mimodal, .mimodaldenegado {
-    display: none;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.704);
-    border: 1px solid #036017;
-    box-shadow: 5px 5px 5px #036017;
-    border-radius: 25px;
-    width: 40%;
-    height: 200px;
-    position: fixed; /* Cambio de relative a fixed */
-    top: 50%; /* Añadido para centrar verticalmente */
-    left: 50%; /* Añadido para centrar horizontalmente */
-    transform: translate(-50%, -50%); /* Añadido para centrar */
-    z-index: 10000;
-}
-    
-    .mimodaldenegado {
-        border: 1px solid #610303;
-        box-shadow: 5px 5px 5px #8c0202;
-    }
-    
-    .modal-content {
-        position: relative;
-        height: 100%;
-    }
-    
-    .modalContent {
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        align-items: center;
-        position: relative;
-        overflow: hidden;
-        z-index: 0;
-    }
-    
-    .logosimple {
-        position: absolute;
-        bottom: -90px;
-        right: -50px;
-        width: 250px;
-        height: 230px;
-    }
-    
-    .btncerrar {
-        width: 30%;
-        height: 40px;
-        font-size: 16px;
-        text-align: center;
-        letter-spacing: 2.5px;
-        font-weight: 500;
-        color: #000;
-        background-color: #ccc;
-        border: none;
-        border-radius: 45px;
-        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-        transition: all 0.3s ease 0s;
-        cursor: pointer;
-        outline: none;
-        z-index: 99;
-    }
-    
-    .parrafoModal {
-        color: white;
-        font-family: truculenta;
-        font-size: 24px;
-    }
 
-    .parrafoModaldenegado {
-        padding: 30px;
-        color: white;
-        font-family: truculenta;
-        font-size: 24px;
+    .mimodal, .mimodaldenegado {
+        display: none;
+        margin: auto;
+        background-color: rgba(0, 0, 0, 0.704);
+        border: 1px solid #036017;
+        border-radius: 25px;
+        width: 40%;
+        height: 200px;
+        position: fixed; /* Cambio de relative a fixed */
+        top: 50%; /* Añadido para centrar verticalmente */
+        left: 50%; /* Añadido para centrar horizontalmente */
+        transform: translate(-50%, -50%); /* Añadido para centrar */
+        z-index: 10000;
     }
+        
+        .modal-content {
+            position: relative;
+            height: 100%;
+        }
+        
+        .modalContent {
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            align-items: center;
+            position: relative;
+            overflow: hidden;
+            z-index: 0;
+        }
+        
+        .logosimple {
+            position: absolute;
+            bottom: -70px;
+            right: -50px;
+            width: 200px;
+            height: 150px;
+        }
+        
+        .btncerrar {
+            width: 30%;
+            height: 40px;
+            font-size: 16px;
+            text-align: center;
+            letter-spacing: 2.5px;
+            font-weight: 500;
+            color: #000;
+            background-color: #ccc;
+            border: none;
+            border-radius: 45px;
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease 0s;
+            cursor: pointer;
+            outline: none;
+            z-index: 99;
+        }
+        
+        .parrafoModal {
+            color: white;
+            font-family: truculenta;
+            font-size: 24px;
+        }
+    
+        .parrafoModaldenegado {
+            padding: 30px;
+            color: white;
+            font-family: truculenta;
+            font-size: 20px;
+        }
 
 /*---------------------------------------------------------------------------------------PAGINA PEDIDOS */
 
